[package]
name = "simple-todo"
version = "0.1.0"
authors = ["Ross <rssmtdd@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1"
hyper = "0.14"
lazy_static = "1.3"
log = "0.4"
pretty_env_logger = "0.3"
serde = "1.0"
serde_derive = "1.0"
tera = "0.11"

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.7"
